[gd_scene load_steps=9 format=2]

[ext_resource path="res://Materials/Spatial.tres" type="Material" id=1]
[ext_resource path="res://Scripts/CarMovement.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )
metallic = 1.0

[sub_resource type="BoxShape" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0, 0.741176, 1, 0.537255 )
metallic = 1.0

[node name="Car" type="KinematicBody"]
transform = Transform( 3.03978, 0, 0, 0, 1.30864, 0, 0, 0, 1, 25.0448, 1.24503, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Wheel" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.669744, -0.694333, 0.999018 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="Wheel4" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.669744, -0.694333, -1.12013 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="Wheel2" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.785432, -0.694333, 0.999018 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="Wheel3" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.785432, -0.694333, -1.15029 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="Window" type="MeshInstance" parent="."]
transform = Transform( 0.0166694, 0, 0, 0, 0.451919, 0, 0, 0, 0.70087, -1.01795, 0.3509, -0.00302672 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CameraA" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraA"]
transform = Transform( -1.62921e-07, 0, 0.328971, 0, 0.764154, 0, -1, 0, -4.95244e-07, 4.17233, 4.08849, 0 )
far = 8192.0

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 1.32042, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
[connection signal="mouse_entered" from="." to="." method="_on_Car_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Car_mouse_exited"]
